@@ -47,7 +47,14 @@ make %{_smp_mflags}
 
 %install
 [ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
-%makeinstall
+{
+  %makeinstall
+  # fontconfig is currently installing these in improper location for RPM
+  # based Linux distributions, so we remove what it installs here, and let
+  # RPM pick up the same files with 'doc' directives in the file lists as
+  # a workaround
+  rm -rf $RPM_BUILD_ROOT/%{_datadir}/doc/fontconfig
+}
 
 %clean
 [ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
@@ -62,6 +69,7 @@ make %{_smp_mflags}
 %postun -p /sbin/ldconfig
 
 %files
+%defattr(-, root, root)
 %doc README AUTHORS COPYING ChangeLog doc/fontconfig-*.{html,txt}
 %dir %{_sysconfdir}/fonts
 %{_sysconfdir}/fonts/fonts.conf
@@ -69,18 +77,25 @@ make %{_smp_mflags}
 %config %{_sysconfdir}/fonts/local.conf
 %{_bindir}/fc-*
 %{_libdir}/libfontconfig*.so.*
-%{_mandir}/man1/*
+%{_mandir}/man5/*
 
 %files devel
 %defattr(-, root, root)
+%doc doc/fontconfig-devel.txt doc/fontconfig-devel/*
 %dir %{_includedir}/fontconfig
 %{_includedir}/fontconfig
 %{_libdir}/*.a
 %{_libdir}/*.la
 %{_libdir}/libfontconfig.so
 %{_libdir}/pkgconfig
+%{_mandir}/man3/*
 
 %changelog
+* Fri Mar  7 2003 Mike A. Harris <mharris@redhat.com> 2.1.92-1
+- Removed man1/* and added man5/* to main package and man3/* to devel package
+- Added missing defattr(-, root, root) to main package
+- Added HTML and text development documentation to -devel subpackage
+
 * Wed Mar  5 2003 Mike A. Harris <mharris@redhat.com>
 - Added back the configure macro options --disable-docs because otherwise
   fontconfig installs docs into /usr/share/doc/fontconfig (with no version
